# small-llm

./: .gitignore  README.md  llm_router.py  main.py  mcp_server.py  pyproject.toml  registry.py  run_streamlit.py  streamlit_app.py
agents/: base_agent.py  function_agent.py  react_agent.py  search_agent.py  tools.py
api/: router.py
chains/: gragh_poc.py  rag_chain.py
config/: env.py
docs/: arch_predefined_chart.md  arch_self_evolving_chart.md  docker_settings.md  hs_tables.csv  medical_domain_thoughts.md  memory_design.md  streamlit_design.md  智慧医疗多智能体协同设计.md  红利报文设计.md
evaluation/: README_medical_system.md  README_tool_integration_fix.md  base_coding.ipynb  fin_eval.ipynb  langchain_eval.ipynb  langgragh_eval.ipynb  mcp_agent.py  mcp_server.ipynb  medical_expert_system.py  rag_agent.py  rag_eval.ipynb  rag_eval_fixed_cell3.py  rag_eval_fixed_embeddings.py
evaluation/findata/test/: accounting_test.csv  advanced_financial_accounting_test.csv  auditing_test.csv  banking_practitioner_qualification_certificate_test.csv  central_banking_test.csv  certified_management_accountant_test.csv  certified_practising_accountant_test.csv  china_actuary_test.csv  commercial_bank_finance_test.csv  corporate_finance_test.csv  corporate_strategy_and_risk_management_test.csv  cost_accounting_test.csv  econometrics_test.csv  economic_law_test.csv  finance_test.csv  financial_engineering_test.csv  financial_management_test.csv  financial_markets_test.csv  fund_qualification_certificate_test.csv  futures_practitioner_qualification_certificate_test.csv  insurance_test.csv  (+13 more)
handcraft/: call_stack.json  chat_report.py  chatbot.py  mcp_tools.py
paint/: mvp.py
prompts/: agent_prompt.txt  divident_prompt.txt  qa_prompt.txt
retriever/: baidu_search.py  embedder.py  google_search.py  loader.py  mysql_retriever.py  search_tools.py  vectordb.py  web_search_utils.py
tests/: web_content_parser.py
utils/: crypt.py  dbhelper.py  helper.py  logger.py
w1/: readme.MD  step_one.ipynb  step_one.py
(+34 files in other folders)
