[project]
name = "langchain_project"
version = "0.1.0"
description = "A comprehensive LangChain-based application with RAG, Agents, and Vector Search capabilities"
authors = [
    {name = "wei dong", email = "wei.dong120@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
    "langgraph>=0.1.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "pypdf>=3.17.0",
    "unstructured>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.6",
    "ipykernel (>=6.30.1,<7.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "dashscope>=1.14.0",
    "fastmcp (>=2.11.3,<3.0.0)",
    "socksio (>=1.0.0,<2.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "playwright (>=1.54.0,<2.0.0)",
    "mysql-connector-python (>=9.4.0,<10.0.0)",
    "dbutils (>=3.1.1,<4.0.0)",
    "pyproject (>=1.3.1,<2.0.0)",
    "project-root-finder (>=1.9,<2.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.poetry]
packages = []

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
